--- a/css/styles.css
+++ b/css/styles.css
@@ -579,9 +579,9 @@ img {
 
   width: 30px;
   height: 30px;
+  border-radius: 50%;
 
   background-color: var(--primary-background-color);
-  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -641,6 +641,7 @@ img {
 
 .work-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-link:hover,
@@ -651,32 +652,30 @@ img {
 
 .work-thumb {
   position: relative;
+  overflow: hidden;
 }
 
 .work-overlay {
   position: absolute;
+  top: 0;
+  left: 0;
+
   padding: 63px 24px;
-  width: 100%;
   height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
-  overflow: hidden;
-
-  background-color: rgba(33, 150, 243, 0.9);
-
-  opacity: 0;
-}
-
-.work-link:hover .work-overlay {
-  opacity: 1;
-}
-
-.work-overlay-text {
   font-size: 18px;
   line-height: 1.56;
   color: var(--secondary-text-color);
+  overflow: auto;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-link:hover .work-overlay {
+  transform: translateY(0);
 }
 
 .work-content {
