--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,21 @@ img {
   line-height: var(--navigation-line-height);
   letter-spacing: var(--navigation-letter-spacing);
   color: var(--main-title-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-item > .header-link {
+  color: var(--main-text-color);
+}
+
+.header-link:hover,
+.header-link:focus {
+  color: var(--accent-link-color);
+}
+
+.header-link.current {
+  color: var(--accent-link-color);
 }
 
 .header-item > .header-link::after {
@@ -174,19 +189,6 @@ img {
   border-radius: 2px;
 
   opacity: 0;
-}
-
-.contact-item > .header-link {
-  color: var(--main-text-color);
-}
-
-.header-link:hover,
-.header-link:focus {
-  color: var(--accent-link-color);
-}
-
-.header-link.current {
-  color: var(--accent-link-color);
 }
 
 .header-link.current::after {
@@ -598,6 +600,9 @@ img {
 }
 
 .filter-btn {
+  min-width: 73px;
+  padding: 6px 22px;
+
   font-family: inherit;
   font-weight: 500;
   font-size: var(--secondary-font-size);
@@ -605,11 +610,15 @@ img {
   text-align: center;
   letter-spacing: var(--main-text-letter-spacing);
   color: var(--main-title-color);
+
   background-color: var(--accent-background-color);
-  min-width: 73px;
+
   border: 1px solid transparent;
   border-radius: 4px;
-  padding: 6px 22px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
