--- a/css/styles.css
+++ b/css/styles.css
@@ -583,24 +583,36 @@ img {
   height: 100%;
 
   background: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.5) skew(30deg);
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1) skew(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
   padding: 30px;
 
   background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .modal-btn {
@@ -616,8 +628,12 @@ img {
   height: 30px;
   border-radius: 50%;
 
-  background-color: var(--primary-background-color);
+  background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-icon {
+  fill: #000000;
 }
 
 /* -------------------PORFOLIO------------------- */
