--- a/css/styles.css
+++ b/css/styles.css
@@ -584,6 +584,7 @@ img {
 
   background: rgba(0, 0, 0, 0.2);
 
+  opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -592,10 +593,6 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-}
-
-.backdrop.is-hidden .modal {
-  transform: scale(0.5) skew(30deg);
 }
 
 .modal {
@@ -613,6 +610,10 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.5) skew(30deg);
 }
 
 .modal-btn {
